Tried changing font to troubleshoot rendering issue on mobile.

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,7 @@ body, html {
   overflow: hidden;
   
   box-sizing: border-box;
-  font-family: 'Raleway';
+  font-family: 'Arial';
 }
 hr {
   background-color: $graphite;
