--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -2,13 +2,15 @@
     padding: 1.5rem;
     width: auto;
     padding-bottom: 10rem;
+    z-index: 0;
     &__title {
         font-size: 1.5rem;
         margin-bottom: 1rem;
-        z-index: -1;
+       
     }
 
     &__form {
+        
         display: flex;
         flex-direction: column;
         gap: 1rem;
@@ -38,16 +40,19 @@
     }
     &__input,
     &__textarea {
- 
+        background: transparent;
         padding: 0.5rem;
        border-radius: 1%;
-        border: 2px solid #ccc;
+        border: 2px solid rgba(65, 66, 76, 0.3);
+        resize: none;
     }
 
     &__input {
         width: 100%;
         border: none;
-        border-bottom: 2px solid #ccc;
+        
+        border-bottom: 2px solid rgba(65, 66, 76, 0.3);;
+        
     }
 
     &__button {
